force-app/main/default/objects/Jalon__c/Jalon__c.object-meta.xml
<CustomObject>
    <label>Jalon</label>
    <nameField>
        <label>Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jalons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>