force-app/main/default/objects/Jalon__c/fields/ActualInvoicedAmount__c.field-meta.xml
<CustomField>
    <fullName>ActualInvoicedAmount__c</fullName>
    <label>Actual Invoiced Amount</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>