force-app/main/default/objects/Jalon__c/fields/ProjectStage__c.field-meta.xml
<CustomField>
    <fullName>ProjectStage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link with the Project Stage</description>
    <label>Project Stage</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Project_Stage__c.ProjectName__c</field>
            <operation>equals</operation>
            <valueField>$Source.Projet__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project_Stage__c</referenceTo>
    <relationshipLabel>Invoices Milestones</relationshipLabel>
    <relationshipName>InvoiceMilestones</relationshipName>
    <type>Lookup</type>
</CustomField>