force-app/main/default/objects/Jalon__c/fields/ToBill__c.field-meta.xml
<CustomField>
    <fullName>ToBill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ToBill</label>
    <type>Checkbox</type>
</CustomField>